--- a/analiz1.html
+++ b/analiz1.html
@@ -3,49 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>P-PRO SCOUT MASTER V3</title>
+    <title>P-PRO SCOUT MASTER V4</title>
     <style>
         :root {
-            --bg: #08090a; --card: #121417; --accent: #fbff00;
-            --input: #1a1d21; --border: #40444b; --text: #9da3ae;
+            --bg: #08090a; --card: #121417; --accent: #00ff85;
+            --input: #1a1d21; --border: #444b52; --text: #9da3ae;
         }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-        body { background: var(--bg); color: white; font-family: 'Segoe UI', system-ui, sans-serif; margin: 0; padding: 12px; font-size: 0.9rem; }
+        body { background: var(--bg); color: white; font-family: sans-serif; margin: 0; padding: 10px; font-size: 0.85rem; }
 
         /* LİG SEÇ */
         .dropdown {
             width: 100%; background: var(--card); border: 2px solid var(--border);
-            padding: 12px; border-radius: 10px; margin-bottom: 15px;
+            padding: 10px; border-radius: 8px; margin-bottom: 12px;
             cursor: pointer; text-align: center; font-weight: bold; color: var(--accent); position: relative;
-            font-size: 0.85rem;
         }
         .dd-menu {
-            display: none; position: absolute; top: 110%; left: 0; width: 100%;
-            background: var(--card); border: 2px solid var(--border); border-radius: 10px; z-index: 100;
+            display: none; position: absolute; top: 105%; left: 0; width: 100%;
+            background: var(--card); border: 2px solid var(--border); border-radius: 8px; z-index: 100;
         }
-        .dd-menu div { padding: 12px; border-bottom: 1px solid var(--border); color: white; font-size: 0.8rem; }
+        .dd-menu div { padding: 10px; border-bottom: 1px solid var(--border); color: white; font-size: 0.75rem; }
 
-        /* SCOUTING GRID */
-        .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-bottom: 15px; }
-        .head { text-align: center; font-size: 10px; color: var(--text); text-transform: uppercase; letter-spacing: 0.5px; }
-        .label { grid-column: span 2; background: #1c1f24; padding: 6px; border-radius: 6px; font-size: 11px; text-align: center; color: var(--accent); margin-top: 4px; border: 1px solid var(--border); font-weight: bold; }
-        input { width: 100%; background: var(--input); border: 2px solid var(--border); padding: 10px; border-radius: 8px; color: white; font-size: 14px; text-align: center; outline: none; transition: 0.2s; }
-        input:focus { border-color: var(--accent); background: #22262c; }
+        /* GRID */
+        .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 6px; margin-bottom: 12px; }
+        .head { text-align: center; font-size: 9px; color: var(--text); text-transform: uppercase; letter-spacing: 0.5px; margin-bottom: 2px; }
+        .label { grid-column: span 2; background: #1c1f24; padding: 4px; border-radius: 5px; font-size: 10px; text-align: center; color: var(--accent); border: 1.5px solid var(--border); font-weight: bold; }
+        
+        input { 
+            width: 100%; background: var(--input); border: 2px solid var(--border); 
+            padding: 8px; border-radius: 6px; color: white; font-size: 13px; 
+            text-align: center; outline: none; transition: 0.2s; 
+        }
+        input:focus { border-color: var(--accent); }
 
         /* BUTONLAR */
-        #btn { width: 100%; padding: 15px; border-radius: 10px; border: none; background: var(--accent); color: black; font-weight: 800; font-size: 14px; margin-bottom: 8px; cursor: pointer; text-transform: uppercase; }
-        #clear-btn { width: 100%; padding: 8px; background: transparent; color: #ff6b6b; border: none; font-size: 11px; cursor: pointer; opacity: 0.8; }
+        #btn { width: 100%; padding: 14px; border-radius: 10px; border: none; background: var(--accent); color: black; font-weight: 800; font-size: 13px; margin-bottom: 5px; cursor: pointer; text-transform: uppercase; }
+        #clear-btn { width: 100%; padding: 5px; background: transparent; color: #ff6b6b; border: none; font-size: 10px; cursor: pointer; opacity: 0.7; }
 
-        /* GEÇMİŞ (HISTORY) */
-        .history-title { margin: 20px 0 10px; font-size: 12px; color: var(--text); border-left: 3px solid var(--accent); padding-left: 8px; font-weight: bold; }
-        .hist-card { background: var(--card); border: 2px solid var(--border); border-radius: 12px; padding: 12px; margin-bottom: 10px; position: relative; animation: fadeIn 0.3s; }
+        /* GEÇMİŞ */
+        .history-title { margin: 15px 0 8px; font-size: 11px; color: var(--text); border-left: 3px solid var(--accent); padding-left: 6px; font-weight: bold; }
+        .hist-card { background: var(--card); border: 2px solid var(--border); border-radius: 10px; padding: 10px; margin-bottom: 8px; position: relative; animation: fadeIn 0.2s; }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(5px); } to { opacity: 1; transform: translateY(0); } }
-        .hist-header { display: flex; justify-content: space-between; font-size: 11px; margin-bottom: 8px; font-weight: bold; padding-right: 20px; }
-        .bar-row { margin-bottom: 6px; }
-        .bar-info { display: flex; justify-content: space-between; font-size: 10px; margin-bottom: 2px; color: var(--text); }
-        .bar-w { width: 100%; height: 5px; background: #2a2d33; border-radius: 3px; overflow: hidden; border: 1px solid #333; }
-        .bar-f { height: 100%; border-radius: 3px; }
-        .del-hist { position: absolute; top: 8px; right: 8px; color: #666; font-size: 16px; cursor: pointer; padding: 2px; }
+        .hist-header { display: flex; justify-content: space-between; font-size: 10px; margin-bottom: 6px; font-weight: bold; padding-right: 15px; }
+        .bar-row { margin-bottom: 4px; }
+        .bar-info { display: flex; justify-content: space-between; font-size: 9px; margin-bottom: 2px; color: var(--text); }
+        .bar-w { width: 100%; height: 4px; background: #2a2d33; border-radius: 2px; overflow: hidden; border: 1px solid #333; }
+        .bar-f { height: 100%; border-radius: 2px; transition: width 0.6s ease; }
+        .del-hist { position: absolute; top: 6px; right: 6px; color: #555; font-size: 14px; cursor: pointer; }
     </style>
 </head>
 <body>
@@ -63,8 +67,8 @@
 
     <div class="grid">
         <div class="head">EV SAHİBİ</div><div class="head">DEPLASMAN</div>
-        <input type="text" id="t1" placeholder="Takım A">
-        <input type="text" id="t2" placeholder="Takım B">
+        <input type="text" id="t1" placeholder="A">
+        <input type="text" id="t2" placeholder="B">
 
         <div class="label">npxG/Sh</div>
         <input type="number" id="t1-q" placeholder="0.00" step="0.01">
@@ -105,8 +109,8 @@
     }
 
     function analyze() {
-        const t1 = document.getElementById('t1').value || "Ev";
-        const t2 = document.getElementById('t2').value || "Dep";
+        const t1 = document.getElementById('t1').value || "A";
+        const t2 = document.getElementById('t2').value || "B";
         const pr = (parseFloat(document.getElementById('t1-p').value)||0) + (parseFloat(document.getElementById('t2-p').value)||0);
         const q = ((parseFloat(document.getElementById('t1-q').value)||0) + (parseFloat(document.getElementById('t2-q').value)||0)) / 2;
         
@@ -139,9 +143,7 @@
         </div>`;
     }
 
-    function clearInputs() {
-        document.querySelectorAll('input').forEach(i => i.value = "");
-    }
+    function clearInputs() { document.querySelectorAll('input').forEach(i => i.value = ""); }
 </script>
 </body>
 </html>
